re PR c++/27933 (ICE with invalid "using")

PR c++/27933
	* name-lookup.c (lookup_qualified_name): Always return error_mark_node
	if lookup fails.

	* g++.dg/lookup/using15.C: New test.

From-SVN: r114580